homework-11 - compelete (S3 Bucket + Sending messages to not active users)
